# app/docs/swagger.json
@@ -1,36 +1,30 @@
 {
-    "consumes": [
-        "application/json"
-    ],
-    "produces": [
-        "application/json"
-    ],
     "schemes": [
         "http",
         "https"
     ],
     "swagger": "2.0",
     "info": {
-        "description": "TBD",
+        "description": "This is an experimental implementation of OpenID Connect with Go.",
         "title": "go-oidc-server",
-        "termsOfService": "TBD",
+        "termsOfService": "https://example.com/terms/",
         "contact": {
-            "name": "TBD",
-            "url": "TBD",
-            "email": "TBD"
+            "name": "API Support",
+            "url": "https://example.com/support/",
+            "email": "support@example.com"
         },
         "license": {
             "name": "MIT",
             "url": "TBD"
         },
-        "version": "1.0"
+        "version": "N/A"
     },
-    "host": "TBD",
+    "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
-        "/v1/authenticate": {
-            "post": {
-                "description": "TBD",
+        "/health": {
+            "get": {
+                "description": "This endpoint checks service condition",
                 "consumes": [
                     "application/json"
                 ],
@@ -38,47 +32,27 @@
                     "application/json"
                 ],
                 "tags": [
-                    "authentication"
+                    "HealthCheck"
                 ],
-                "summary": "TBD",
-                "operationId": "Authenticate.ServeHTTP",
-                "parameters": [
-                    {
-                        "description": "Username",
-                        "name": "name",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Password",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
+                "summary": "checks service condition",
+                "operationId": "CheckHealth.ServeHTTP",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.AuthenticateResponse"
+                            "$ref": "#/definitions/model.CheckHealthResponse"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "503": {
+                        "description": "Service Unavailable",
                         "schema": {
-                            "$ref": "#/definitions/model.ErrorResponse"
+                            "$ref": "#/definitions/model.CheckHealthResponse"
                         }
                     }
                 }
             }
         },
-        "/v1/authorization": {
+        "/v1/authorize": {
             "get": {
                 "description": "TBD",
                 "consumes": [
@@ -88,7 +62,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "authorization"
+                    "OIDC"
                 ],
                 "summary": "TBD",
                 "operationId": "AuthorizeGet.ServeHTTP",
@@ -132,7 +106,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "authorization"
+                    "OIDC"
                 ],
                 "summary": "TBD",
                 "operationId": "AuthorizePost.ServeHTTP",
@@ -167,9 +141,130 @@
                     }
                 }
             }
+        },
+        "/v1/user/authenticate": {
+            "post": {
+                "description": "This endpoint authenticates user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "authenticates user",
+                "operationId": "Authenticate.ServeHTTP",
+                "parameters": [
+                    {
+                        "description": "user credential",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.AuthenticateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.AuthenticateResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/user/register": {
+            "post": {
+                "description": "This endpoint registers user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "registers user",
+                "operationId": "Register.ServeHTTP",
+                "parameters": [
+                    {
+                        "description": "user credential",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.RegisterUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.RegisterUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "model.AuthenticateRequest": {
+            "type": "object",
+            "required": [
+                "name",
+                "password"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "model.AuthenticateResponse": {
             "type": "object",
             "properties": {
@@ -178,27 +273,54 @@
                 }
             }
         },
+        "model.CheckHealthResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.ErrorResponse": {
             "type": "object",
+            "required": [
+                "error"
+            ],
             "properties": {
                 "error": {
                     "type": "string"
                 }
             }
-        }
-    },
-    "tags": [
-        {
-            "description": "TBD",
-            "name": "TBD",
-            "externalDocs": {
-                "description": "TBD",
-                "url": "TBD"
+        },
+        "model.RegisterUserRequest": {
+            "type": "object",
+            "required": [
+                "name",
+                "password"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.RegisterUserResponse": {
+            "type": "object",
+            "required": [
+                "id",
+                "name"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
             }
         }
-    ],
-    "externalDocs": {
-        "description": "TBD",
-        "url": "TBD"
     }
 }
