# app/model/user.go
@@ -4,12 +4,12 @@ import (
 	"github.com/42milez/go-oidc-server/app/typedef"
 )
 
-type CreateUserRequest struct {
+type RegisterUserRequest struct {
 	Name     string `json:"name" validate:"required"`
 	Password string `json:"password" validate:"required"`
 }
 
-type CreateUserResponse struct {
-	ID   typedef.UserID
-	Name string
+type RegisterUserResponse struct {
+	ID   typedef.UserID `json:"id" validate:"required"`
+	Name string         `json:"name" validate:"required"`
 }
